cypher.output
Terminals which are not used

   PERFORM
   UNKNOWN
   ARROW


State 294 conflicts: 2 reduce/reduce
State 316 conflicts: 1 shift/reduce


Grammar

    0 $accept: statement $end

    1 statement: queries SEMICOLON

    2 queries: query
    3        | set_graph_clause
    4        | queries query

    5 query: alter_clause
    6      | comment_clause
    7      | create_clause
    8      | delete_clause
    9      | drop_clause
   10      | execute_clause
   11      | exists_clause
   12      | explain_clause
   13      | load_clause
   14      | match_clause
   15      | merge_clause
   16      | prepare_clause
   17      | reindex_clause
   18      | remove_clause
   19      | return_clause
   20      | show_clause
   21      | sql_statement
   22      | unwind_clause
   23      | where_clause
   24      | with_clause

   25 alter_clause: ALTER GRAPH IDENTIFIER alter_graph_options
   26             | ALTER VLABEL if_exists_opt IDENTIFIER alter_vlabel_options

   27 alter_graph_options: OWNER IDENTIFIER
   28                    | RENAME IDENTIFIER

   29 alter_vlabel_options: CLUSTER ON IDENTIFIER
   30                     | DISABLE INDEX
   31                     | INHERIT IDENTIFIER
   32                     | NOINHERIT IDENTIFIER
   33                     | OWNER IDENTIFIER
   34                     | RENAME IDENTIFIER
   35                     | SET LOGGED
   36                     | SET STORAGE IDENTIFIER
   37                     | SET UNLOGGED
   38                     | SET WITHOUT CLUSTER

   39 case_clause: CASE identifier_opt WHEN math_expression THEN math_expression ELSE math_expression END

   40 comment_clause: COMMENT ON comment_item IDENTIFIER IS STRING

   41 comment_item: GRAPH
   42             | VLABEL

   43 create_clause: CREATE create_pattern

   44 create_pattern: CONSTRAINT constraint_patt
   45               | logged_opt ELABEL if_exists_opt IDENTIFIER inherits_opt on_clause_opt tablespace_opt disable_index_opt
   46               | logged_opt GRAPH if_exists_opt IDENTIFIER tablespace_opt disable_index_opt
   47               | logged_opt VLABEL if_exists_opt IDENTIFIER inherits_opt on_clause_opt tablespace_opt disable_index_opt
   48               | or_replace_opt FUNCTION function RETURNS setof_opt expression create_function_ext_opt
   49               | pattern_list set_clause_opt

   50 logged_opt: /* empty */
   51           | LOGGED
   52           | UNLOGGED

   53 inherits_opt: /* empty */
   54             | INHERITS expression
   55             | INHERITS LPAREN id_list RPAREN

   56 on_clause_opt: /* empty */
   57              | on_clause

   58 tablespace_opt: /* empty */
   59               | TABLESPACE IDENTIFIER

   60 disable_index_opt: /* empty */
   61                  | DISABLE INDEX

   62 constraint_patt: identifier_opt ON IDENTIFIER assert_patt_opt

   63 assert_patt_opt: /* empty */
   64                | ASSERT compare_list
   65                | ASSERT LPAREN compare_list RPAREN

   66 compare_list: math_expression constraint_addon_opt
   67             | math_expression constraint_addon_opt logic compare_list

   68 constraint_addon_opt: /* empty */
   69                     | IS not_opt UNIQUE constraint_addon_opt
   70                     | IS not_opt NUL constraint_addon_opt
   71                     | not_opt IN expression constraint_addon_opt

   72 or_replace_opt: /* empty */
   73               | OR REPLACE

   74 setof_opt: /* empty */
   75          | SETOF

   76 create_function_ext_opt: /* empty */
   77                        | create_function_exts

   78 create_function_exts: create_function_ext
   79                     | create_function_exts create_function_ext

   80 create_function_ext: LANGUAGE str_val
   81                    | VOLATILE
   82                    | IMMUTABLE
   83                    | STABLE
   84                    | PARALLEL SAFE
   85                    | STRICT
   86                    | CALLED ON NUL INPUT
   87                    | RETURNS NUL ON NUL INPUT
   88                    | AS str_val
   89                    | AS DOLLAR identifier_opt DOLLAR declare_opt BGN create_function_contents END DOLLAR identifier_opt DOLLAR

   90 declare_opt: /* empty */
   91            | DECLARE declare_list

   92 declare_list: IDENTIFIER IDENTIFIER SEMICOLON
   93             | declare_list IDENTIFIER IDENTIFIER SEMICOLON

   94 create_function_contents: create_function_content
   95                         | create_function_contents create_function_content

   96 create_function_content: math_expression typecast_opt SEMICOLON
   97                        | queries into_opt SEMICOLON
   98                        | RETURN QUERY queries into_opt SEMICOLON

   99 into_opt: /* empty */
  100         | INTO identifier_list

  101 delete_clause: detach_opt DELETE delete_list set_clause_opt

  102 detach_opt: /* empty */
  103           | DETACH

  104 delete_list: expression_list
  105            | path_pattern_list

  106 drop_clause: DROP drop_pattern

  107 drop_pattern: CONSTRAINT identifier_opt ON IDENTIFIER assert_patt_opt
  108             | ELABEL IDENTIFIER cascade_opt
  109             | GRAPH if_exists_opt IDENTIFIER cascade_opt
  110             | VLABEL IDENTIFIER cascade_opt

  111 cascade_opt: /* empty */
  112            | CASCADE

  113 execute_clause: EXECUTE IDENTIFIER stmt_info_opt

  114 stmt_info_opt: /* empty */
  115              | LPAREN item_list RPAREN

  116 exists_clause: EXISTS LPAREN exists_pattern RPAREN

  117 exists_pattern: expression
  118               | path_pattern

  119 explain_clause: EXPLAIN explain_list
  120               | EXPLAIN LPAREN explain_list RPAREN

  121 explain_list: explain_item
  122             | explain_list COMMA explain_item

  123 explain_item: VERBOSE boolean_opt
  124             | COSTSOFF boolean_opt
  125             | IDENTIFIER boolean_opt

  126 load_clause: LOAD load_pattern

  127 load_pattern: FROM IDENTIFIER as_opt
  128             | LABELS with_id_opt IDENTIFIER FROM STRING ON IDENTIFIER
  129             | EDGES IDENTIFIER FROM STRING ON IDENTIFIER

  130 with_id_opt: /* empty */
  131            | WITH IDS

  132 match_clause: optional_opt MATCH pattern_list set_clause_opt

  133 optional_opt: /* empty */
  134             | OPTIONAL

  135 pattern_list: assign_to_variable_opt path_pattern_list
  136             | assign_to_variable_opt LPAREN path_pattern_list RPAREN

  137 assign_to_variable_opt: /* empty */
  138                       | IDENTIFIER EQUALS

  139 path_pattern_list: path_pattern
  140                  | path_pattern_list COMMA assign_to_variable_opt path_pattern

  141 path_pattern: node_pattern
  142             | path_pattern edge_pattern node_pattern

  143 node_pattern: LPAREN node_alias_opt node_labels_opt node_properties_opt only_opt dollar_opt RPAREN
  144             | LPAREN IDENTIFIER compare expression only_opt RPAREN
  145             | LPAREN EQUALS expression RPAREN

  146 node_alias_opt: /* empty */
  147               | IDENTIFIER

  148 node_labels_opt: /* empty */
  149                | COLON IDENTIFIER

  150 node_properties_opt: /* empty */
  151                    | LBRACE map_literal RBRACE

  152 map_literal: /* empty */
  153            | nonempty_map_literal

  154 nonempty_map_literal: map_entry
  155                     | nonempty_map_literal COMMA map_entry

  156 map_entry: IDENTIFIER COLON math_expression

  157 only_opt: /* empty */
  158         | ONLY

  159 dollar_opt: /* empty */
  160           | DOLLAR IDENTIFIER

  161 edge_pattern: DASH rel_pattern DASH
  162             | LT DASH rel_pattern DASH
  163             | DASH rel_pattern DASH GT

  164 rel_pattern: LBRACKET rel_alias_opt rel_labels_opt only_opt variable_length_edges_opt node_properties_opt RBRACKET
  165            | LBRACKET IDENTIFIER compare expression only_opt RBRACKET

  166 rel_alias_opt: /* empty */
  167              | IDENTIFIER

  168 rel_labels_opt: /* empty */
  169               | COLON IDENTIFIER pipe_opt expression_opt

  170 pipe_opt: /* empty */
  171         | PIPE IDENTIFIER

  172 variable_length_edges_opt: /* empty */
  173                          | ASTERISK edge_length_opt

  174 edge_length_opt: /* empty */
  175                | INTEGER dot_opt upper_bound_opt
  176                | DOT DOT INTEGER

  177 dot_opt: /* empty */
  178        | DOT DOT

  179 upper_bound_opt: /* empty */
  180                | INTEGER

  181 merge_clause: MERGE path_pattern set_clause_opt

  182 on_clause: ON on_pattern

  183 on_pattern: CREATE
  184           | MATCH

  185 order_clause: ORDER BY sort_item_list

  186 sort_item_list: sort_item
  187               | sort_item_list COMMA sort_item

  188 sort_item: expression sort_direction_opt

  189 sort_direction_opt: /* empty */
  190                   | ASC
  191                   | DESC

  192 prepare_clause: PREPARE IDENTIFIER stmt_info_opt AS

  193 reindex_clause: REINDEX VLABEL IDENTIFIER

  194 remove_clause: REMOVE expression_list

  195 return_clause: RETURN distinct_not_opt return_item_clause union_opt

  196 distinct_not_opt: /* empty */
  197                 | DISTINCT
  198                 | NOT

  199 return_item_clause: return_item_list str_match_clause_opt order_clause_opt skip_clause_opt limit_clause_opt
  200                   | LBRACKET return_item_list str_match_clause_opt RBRACKET order_clause_opt skip_clause_opt limit_clause_opt

  201 return_item_list: item rtn_typecast_opt
  202                 | return_item_list COMMA item rtn_typecast_opt

  203 str_match_clause_opt: /* empty */
  204                     | STARTS WITH expression
  205                     | ENDS WITH expression
  206                     | CONTAINS expression
  207                     | EQUALSTILDE expression

  208 union_opt: /* empty */
  209          | UNION
  210          | UNIONALL

  211 set_clause: SET assign_list
  212           | set_clause SET assign_list

  213 assign_list: math_expression
  214            | assign_list COMMA math_expression

  215 set_graph_clause: SET graph_option EQUALS graph_path_list

  216 graph_option: GRAPH
  217             | GRAPH_PATH

  218 graph_path_list: IDENTIFIER
  219                | graph_path_list COMMA IDENTIFIER

  220 show_clause: SHOW graph_option

  221 sql_statement: sql_query

  222 sql_query: select_clause

  223 select_clause: SELECT expression_list from_clause

  224 from_clause: FROM LPAREN queries RPAREN as_clause

  225 as_clause: AS IDENTIFIER
  226          | AS UNDER LPAREN identifier_list RPAREN

  227 unwind_clause: UNWIND expression AS IDENTIFIER

  228 where_clause: WHERE where_expressions

  229 where_expressions: where_expression
  230                  | where_expressions logic where_expression

  231 where_expression: exists_clause
  232                 | not_opt expression where_compare_opt

  233 where_compare_opt: /* empty */
  234                  | compare not_opt expression
  235                  | IS not_opt expression
  236                  | not_opt IN not_opt expression

  237 with_clause: WITH distinct_opt item_clause

  238 item_clause: item_list order_clause_opt skip_clause_opt limit_clause_opt
  239            | LPAREN item_list RPAREN order_clause_opt skip_clause_opt limit_clause_opt

  240 boolean: TRU
  241        | FAL

  242 compare: EQUALS
  243        | EQUALS EQUALS
  244        | EXCLAMATION EQUALS
  245        | LT
  246        | GT
  247        | LT EQUALS
  248        | GT EQUALS
  249        | LT GT

  250 expression_list: expression expression_ext_opt
  251                | expression_list COMMA expression expression_ext_opt

  252 expression: NUL
  253           | negative_opt INTEGER
  254           | negative_opt FLOAT
  255           | str_val str_val_opt array_opt dot_operator_opt
  256           | boolean
  257           | LBRACE map_literal RBRACE
  258           | LBRACKET item_list_opt RBRACKET
  259           | LPAREN sql_statement RPAREN
  260           | function array_opt dot_operator_opt
  261           | DOLLAR INTEGER
  262           | DOLLAR IDENTIFIER
  263           | ASTERISK

  264 negative_opt: /* empty */
  265             | DASH

  266 str_val_opt: /* empty */
  267            | str_val

  268 array_opt: /* empty */
  269          | LBRACKET expression RBRACKET

  270 dot_operator_opt: /* empty */
  271                 | DOT IDENTIFIER

  272 item_list_opt: /* empty */
  273              | item_list

  274 expression_ext_opt: /* empty */
  275                   | IN expression

  276 function: IDENTIFIER LPAREN function_params_opt RPAREN

  277 function_params_opt: /* empty */
  278                    | function_params_list

  279 function_params_list: expression_list
  280                     | path_pattern

  281 id_list: IDENTIFIER
  282        | IDENTIFIER COMMA id_list
  283        | IDENTIFIER IN expression

  284 identifier_list: IDENTIFIER
  285                | identifier_list COMMA IDENTIFIER

  286 item_list: item
  287          | item_list COMMA item

  288 item: math_expression is_expression_opt
  289     | math_expression is_expression_opt AS IDENTIFIER
  290     | math_expression IN math_expression
  291     | math_expression IN math_expression PIPE expression
  292     | exists_clause
  293     | exists_clause AS IDENTIFIER
  294     | case_clause
  295     | LPAREN item RPAREN

  296 is_expression_opt: /* empty */
  297                  | IS not_opt expression

  298 logic: AND
  299      | OR
  300      | XOR

  301 math_expression: expression
  302                | math_expression compare expression
  303                | math_expression PLUS expression
  304                | math_expression PLUS EQUALS expression
  305                | math_expression DASH expression
  306                | math_expression DASH EQUALS expression
  307                | math_expression ASTERISK expression
  308                | math_expression ASTERISK EQUALS expression
  309                | math_expression SLASH expression
  310                | math_expression SLASH EQUALS expression
  311                | math_expression PERCENT expression
  312                | math_expression CARET expression

  313 str_val: IDENTIFIER
  314        | STRING

  315 as_opt: /* empty */
  316       | AS IDENTIFIER

  317 boolean_opt: /* empty */
  318            | boolean

  319 distinct_opt: /* empty */
  320             | DISTINCT

  321 expression_opt: /* empty */
  322               | EQUALS expression

  323 identifier_opt: /* empty */
  324               | IDENTIFIER

  325 if_exists_opt: /* empty */
  326              | IF not_opt EXISTS

  327 limit_clause_opt: /* empty */
  328                 | LIMIT INTEGER

  329 not_opt: /* empty */
  330        | NOT

  331 order_clause_opt: /* empty */
  332                 | order_clause

  333 rtn_typecast_opt: /* empty */
  334                 | COLON COLON str_val

  335 set_clause_opt: /* empty */
  336               | set_clause

  337 skip_clause_opt: /* empty */
  338                | SKIP INTEGER

  339 typecast_opt: /* empty */
  340             | COLON COLON str_val


Terminals, with rules where they appear

$end (0) 0
error (256)
ALTER (258) 25 26
AND (259) 298
AS (260) 88 89 192 225 226 227 289 293 316
ASC (261) 190
ASSERT (262) 64 65
ASTERISK (263) 173 263 307 308
BGN (264) 89
BY (265) 185
CALLED (266) 86
CARET (267) 312
CASCADE (268) 112
CASE (269) 39
CLUSTER (270) 29 38
COLON (271) 149 156 169 334 340
COMMA (272) 122 140 155 187 202 214 219 251 282 285 287
COMMENT (273) 40
CONSTRAINT (274) 44 107
CONTAINS (275) 206
COSTSOFF (276) 124
CREATE (277) 43 183
DASH (278) 161 162 163 265 305 306
DELETE (279) 101
DECLARE (280) 91
DESC (281) 191
DETACH (282) 103
DISABLE (283) 30 61
DISTINCT (284) 197 320
DOLLAR (285) 89 160 261 262
DOT (286) 176 178 271
DROP (287) 106
EDGES (288) 129
ELABEL (289) 45 108
ELSE (290) 39
END (291) 39 89
ENDS (292) 205
EQUALS (293) 138 145 215 242 243 244 247 248 304 306 308 310 322
EQUALSTILDE (294) 207
EXCLAMATION (295) 244
EXECUTE (296) 113
EXISTS (297) 116 326
EXPLAIN (298) 119 120
FAL (299) 241
FROM (300) 127 128 129 224
FUNCTION (301) 48
GRAPH (302) 25 41 46 109 216
GRAPH_PATH (303) 217
GT (304) 163 246 248 249
IDS (305) 131
IF (306) 326
IMMUTABLE (307) 82
IN (308) 71 236 275 283 290 291
INDEX (309) 30 61
INHERIT (310) 31
INHERITS (311) 54 55
INPUT (312) 86 87
INTO (313) 100
IS (314) 40 69 70 235 297
LABELS (315) 128
LANGUAGE (316) 80
LBRACE (317) 151 257
LBRACKET (318) 164 165 200 258 269
LIMIT (319) 328
LOAD (320) 126
LOGGED (321) 35 51
LPAREN (322) 55 65 115 116 120 136 143 144 145 224 226 239 259 276
    295
LT (323) 162 245 247 249
MATCH (324) 132 184
MERGE (325) 181
NOINHERIT (326) 32
NOT (327) 198 330
NUL (328) 70 86 87 252
OPTIONAL (329) 134
ON (330) 29 40 62 86 87 107 128 129 182
ONLY (331) 158
OR (332) 73 299
ORDER (333) 185
OWNER (334) 27 33
PARALLEL (335) 84
PERCENT (336) 311
PERFORM (337)
PIPE (338) 171 291
PLUS (339) 303 304
PREPARE (340) 192
QUERY (341) 98
RBRACE (342) 151 257
RBRACKET (343) 164 165 200 258 269
REINDEX (344) 193
REMOVE (345) 194
RENAME (346) 28 34
REPLACE (347) 73
RETURN (348) 98 195
RETURNS (349) 48 87
RPAREN (350) 55 65 115 116 120 136 143 144 145 224 226 239 259 276
    295
SAFE (351) 84
SELECT (352) 223
SEMICOLON (353) 1 92 93 96 97 98
SET (354) 35 36 37 38 211 212 215
SETOF (355) 75
SHOW (356) 220
SKIP (357) 338
SLASH (358) 309 310
STABLE (359) 83
STARTS (360) 204
STORAGE (361) 36
STRICT (362) 85
TABLESPACE (363) 59
THEN (364) 39
TRU (365) 240
UNDER (366) 226
UNION (367) 209
UNIONALL (368) 210
UNIQUE (369) 69
UNLOGGED (370) 37 52
UNWIND (371) 227
VERBOSE (372) 123
VLABEL (373) 26 42 47 110 193
VOLATILE (374) 81
WHEN (375) 39
WHERE (376) 228
WITH (377) 131 204 205 237
WITHOUT (378) 38
XOR (379) 300
INTEGER (380) 175 176 180 253 261 328 338
FLOAT (381) 254
IDENTIFIER (382) 25 26 27 28 29 31 32 33 34 36 40 45 46 47 59 62 92
    93 107 108 109 110 113 125 127 128 129 138 144 147 149 156 160
    165 167 169 171 192 193 218 219 225 227 262 271 276 281 282 283
    284 285 289 293 313 316 324
STRING (383) 40 128 129 314
UNKNOWN (384)
ARROW (385)


Nonterminals, with rules where they appear

$accept (131)
    on left: 0
statement (132)
    on left: 1, on right: 0
queries (133)
    on left: 2 3 4, on right: 1 4 97 98 224
query (134)
    on left: 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24
   , on right: 2 4
alter_clause (135)
    on left: 25 26, on right: 5
alter_graph_options (136)
    on left: 27 28, on right: 25
alter_vlabel_options (137)
    on left: 29 30 31 32 33 34 35 36 37 38, on right: 26
case_clause (138)
    on left: 39, on right: 294
comment_clause (139)
    on left: 40, on right: 6
comment_item (140)
    on left: 41 42, on right: 40
create_clause (141)
    on left: 43, on right: 7
create_pattern (142)
    on left: 44 45 46 47 48 49, on right: 43
logged_opt (143)
    on left: 50 51 52, on right: 45 46 47
inherits_opt (144)
    on left: 53 54 55, on right: 45 47
on_clause_opt (145)
    on left: 56 57, on right: 45 47
tablespace_opt (146)
    on left: 58 59, on right: 45 46 47
disable_index_opt (147)
    on left: 60 61, on right: 45 46 47
constraint_patt (148)
    on left: 62, on right: 44
assert_patt_opt (149)
    on left: 63 64 65, on right: 62 107
compare_list (150)
    on left: 66 67, on right: 64 65 67
constraint_addon_opt (151)
    on left: 68 69 70 71, on right: 66 67 69 70 71
or_replace_opt (152)
    on left: 72 73, on right: 48
setof_opt (153)
    on left: 74 75, on right: 48
create_function_ext_opt (154)
    on left: 76 77, on right: 48
create_function_exts (155)
    on left: 78 79, on right: 77 79
create_function_ext (156)
    on left: 80 81 82 83 84 85 86 87 88 89, on right: 78 79
declare_opt (157)
    on left: 90 91, on right: 89
declare_list (158)
    on left: 92 93, on right: 91 93
create_function_contents (159)
    on left: 94 95, on right: 89 95
create_function_content (160)
    on left: 96 97 98, on right: 94 95
into_opt (161)
    on left: 99 100, on right: 97 98
delete_clause (162)
    on left: 101, on right: 8
detach_opt (163)
    on left: 102 103, on right: 101
delete_list (164)
    on left: 104 105, on right: 101
drop_clause (165)
    on left: 106, on right: 9
drop_pattern (166)
    on left: 107 108 109 110, on right: 106
cascade_opt (167)
    on left: 111 112, on right: 108 109 110
execute_clause (168)
    on left: 113, on right: 10
stmt_info_opt (169)
    on left: 114 115, on right: 113 192
exists_clause (170)
    on left: 116, on right: 11 231 292 293
exists_pattern (171)
    on left: 117 118, on right: 116
explain_clause (172)
    on left: 119 120, on right: 12
explain_list (173)
    on left: 121 122, on right: 119 120 122
explain_item (174)
    on left: 123 124 125, on right: 121 122
load_clause (175)
    on left: 126, on right: 13
load_pattern (176)
    on left: 127 128 129, on right: 126
with_id_opt (177)
    on left: 130 131, on right: 128
match_clause (178)
    on left: 132, on right: 14
optional_opt (179)
    on left: 133 134, on right: 132
pattern_list (180)
    on left: 135 136, on right: 49 132
assign_to_variable_opt (181)
    on left: 137 138, on right: 135 136 140
path_pattern_list (182)
    on left: 139 140, on right: 105 135 136 140
path_pattern (183)
    on left: 141 142, on right: 118 139 140 142 181 280
node_pattern (184)
    on left: 143 144 145, on right: 141 142
node_alias_opt (185)
    on left: 146 147, on right: 143
node_labels_opt (186)
    on left: 148 149, on right: 143
node_properties_opt (187)
    on left: 150 151, on right: 143 164
map_literal (188)
    on left: 152 153, on right: 151 257
nonempty_map_literal (189)
    on left: 154 155, on right: 153 155
map_entry (190)
    on left: 156, on right: 154 155
only_opt (191)
    on left: 157 158, on right: 143 144 164 165
dollar_opt (192)
    on left: 159 160, on right: 143
edge_pattern (193)
    on left: 161 162 163, on right: 142
rel_pattern (194)
    on left: 164 165, on right: 161 162 163
rel_alias_opt (195)
    on left: 166 167, on right: 164
rel_labels_opt (196)
    on left: 168 169, on right: 164
pipe_opt (197)
    on left: 170 171, on right: 169
variable_length_edges_opt (198)
    on left: 172 173, on right: 164
edge_length_opt (199)
    on left: 174 175 176, on right: 173
dot_opt (200)
    on left: 177 178, on right: 175
upper_bound_opt (201)
    on left: 179 180, on right: 175
merge_clause (202)
    on left: 181, on right: 15
on_clause (203)
    on left: 182, on right: 57
on_pattern (204)
    on left: 183 184, on right: 182
order_clause (205)
    on left: 185, on right: 332
sort_item_list (206)
    on left: 186 187, on right: 185 187
sort_item (207)
    on left: 188, on right: 186 187
sort_direction_opt (208)
    on left: 189 190 191, on right: 188
prepare_clause (209)
    on left: 192, on right: 16
reindex_clause (210)
    on left: 193, on right: 17
remove_clause (211)
    on left: 194, on right: 18
return_clause (212)
    on left: 195, on right: 19
distinct_not_opt (213)
    on left: 196 197 198, on right: 195
return_item_clause (214)
    on left: 199 200, on right: 195
return_item_list (215)
    on left: 201 202, on right: 199 200 202
str_match_clause_opt (216)
    on left: 203 204 205 206 207, on right: 199 200
union_opt (217)
    on left: 208 209 210, on right: 195
set_clause (218)
    on left: 211 212, on right: 212 336
assign_list (219)
    on left: 213 214, on right: 211 212 214
set_graph_clause (220)
    on left: 215, on right: 3
graph_option (221)
    on left: 216 217, on right: 215 220
graph_path_list (222)
    on left: 218 219, on right: 215 219
show_clause (223)
    on left: 220, on right: 20
sql_statement (224)
    on left: 221, on right: 21 259
sql_query (225)
    on left: 222, on right: 221
select_clause (226)
    on left: 223, on right: 222
from_clause (227)
    on left: 224, on right: 223
as_clause (228)
    on left: 225 226, on right: 224
unwind_clause (229)
    on left: 227, on right: 22
where_clause (230)
    on left: 228, on right: 23
where_expressions (231)
    on left: 229 230, on right: 228 230
where_expression (232)
    on left: 231 232, on right: 229 230
where_compare_opt (233)
    on left: 233 234 235 236, on right: 232
with_clause (234)
    on left: 237, on right: 24
item_clause (235)
    on left: 238 239, on right: 237
boolean (236)
    on left: 240 241, on right: 256 318
compare (237)
    on left: 242 243 244 245 246 247 248 249, on right: 144 165 234
    302
expression_list (238)
    on left: 250 251, on right: 104 194 223 251 279
expression (239)
    on left: 252 253 254 255 256 257 258 259 260 261 262 263,
    on right: 48 54 71 117 144 145 165 188 204 205 206 207 227 232
    234 235 236 250 251 269 275 283 291 297 301 302 303 304 305 306
    307 308 309 310 311 312 322
negative_opt (240)
    on left: 264 265, on right: 253 254
str_val_opt (241)
    on left: 266 267, on right: 255
array_opt (242)
    on left: 268 269, on right: 255 260
dot_operator_opt (243)
    on left: 270 271, on right: 255 260
item_list_opt (244)
    on left: 272 273, on right: 258
expression_ext_opt (245)
    on left: 274 275, on right: 250 251
function (246)
    on left: 276, on right: 48 260
function_params_opt (247)
    on left: 277 278, on right: 276
function_params_list (248)
    on left: 279 280, on right: 278
id_list (249)
    on left: 281 282 283, on right: 55 282
identifier_list (250)
    on left: 284 285, on right: 100 226 285
item_list (251)
    on left: 286 287, on right: 115 238 239 273 287
item (252)
    on left: 288 289 290 291 292 293 294 295, on right: 201 202 286
    287 295
is_expression_opt (253)
    on left: 296 297, on right: 288 289
logic (254)
    on left: 298 299 300, on right: 67 230
math_expression (255)
    on left: 301 302 303 304 305 306 307 308 309 310 311 312,
    on right: 39 66 67 96 156 213 214 288 289 290 291 302 303 304 305
    306 307 308 309 310 311 312
str_val (256)
    on left: 313 314, on right: 80 88 255 267 334 340
as_opt (257)
    on left: 315 316, on right: 127
boolean_opt (258)
    on left: 317 318, on right: 123 124 125
distinct_opt (259)
    on left: 319 320, on right: 237
expression_opt (260)
    on left: 321 322, on right: 169
identifier_opt (261)
    on left: 323 324, on right: 39 62 89 107
if_exists_opt (262)
    on left: 325 326, on right: 26 45 46 47 109
limit_clause_opt (263)
    on left: 327 328, on right: 199 200 238 239
not_opt (264)
    on left: 329 330, on right: 69 70 71 232 234 235 236 297 326
order_clause_opt (265)
    on left: 331 332, on right: 199 200 238 239
rtn_typecast_opt (266)
    on left: 333 334, on right: 201 202
set_clause_opt (267)
    on left: 335 336, on right: 49 101 132 181
skip_clause_opt (268)
    on left: 337 338, on right: 199 200 238 239
typecast_opt (269)
    on left: 339 340, on right: 96


state 0

    0 $accept: . statement $end

    ALTER     shift, and go to state 1
    COMMENT   shift, and go to state 2
    CREATE    shift, and go to state 3
    DETACH    shift, and go to state 4
    DROP      shift, and go to state 5
    EXECUTE   shift, and go to state 6
    EXISTS    shift, and go to state 7
    EXPLAIN   shift, and go to state 8
    LOAD      shift, and go to state 9
    MERGE     shift, and go to state 10
    OPTIONAL  shift, and go to state 11
    PREPARE   shift, and go to state 12
    REINDEX   shift, and go to state 13
    REMOVE    shift, and go to state 14
    RETURN    shift, and go to state 15
    SELECT    shift, and go to state 16
    SET       shift, and go to state 17
    SHOW      shift, and go to state 18
    UNWIND    shift, and go to state 19
    WHERE     shift, and go to state 20
    WITH      shift, and go to state 21

    MATCH     reduce using rule 133 (optional_opt)
    $default  reduce using rule 102 (detach_opt)

    statement         go to state 22
    queries           go to state 23
    query             go to state 24
    alter_clause      go to state 25
    comment_clause    go to state 26
    create_clause     go to state 27
    delete_clause     go to state 28
    detach_opt        go to state 29
    drop_clause       go to state 30
    execute_clause    go to state 31
    exists_clause     go to state 32
    explain_clause    go to state 33
    load_clause       go to state 34
    match_clause      go to state 35
    optional_opt      go to state 36
    merge_clause      go to state 37
    prepare_clause    go to state 38
    reindex_clause    go to state 39
    remove_clause     go to state 40
    return_clause     go to state 41
    set_graph_clause  go to state 42
    show_clause       go to state 43
    sql_statement     go to state 44
    sql_query         go to state 45
    select_clause     go to state 46
    unwind_clause     go to state 47
    where_clause      go to state 48
    with_clause       go to state 49


state 1

   25 alter_clause: ALTER . GRAPH IDENTIFIER alter_graph_options
   26             | ALTER . VLABEL if_exists_opt IDENTIFIER alter_vlabel_options

    GRAPH   shift, and go to state 50
    VLABEL  shift, and go to state 51


state 2

   40 comment_clause: COMMENT . ON comment_item IDENTIFIER IS STRING

    ON  shift, and go to state 52


state 3

   43 create_clause: CREATE . create_pattern

    CONSTRAINT  shift, and go to state 53
    LOGGED      shift, and go to state 54
    OR          shift, and go to state 55
    UNLOGGED    shift, and go to state 56
    IDENTIFIER  shift, and go to state 57

    FUNCTION  reduce using rule 72 (or_replace_opt)
    LPAREN    reduce using rule 137 (assign_to_variable_opt)
    $default  reduce using rule 50 (logged_opt)

    create_pattern          go to state 58
    logged_opt              go to state 59
    or_replace_opt          go to state 60
    pattern_list            go to state 61
    assign_to_variable_opt  go to state 62


state 4

  103 detach_opt: DETACH .

    $default  reduce using rule 103 (detach_opt)


state 5

  106 drop_clause: DROP . drop_pattern

    CONSTRAINT  shift, and go to state 63
    ELABEL      shift, and go to state 64
    GRAPH       shift, and go to state 65
    VLABEL      shift, and go to state 66

    drop_pattern  go to state 67


state 6

  113 execute_clause: EXECUTE . IDENTIFIER stmt_info_opt

    IDENTIFIER  shift, and go to state 68


state 7

  116 exists_clause: EXISTS . LPAREN exists_pattern RPAREN

    LPAREN  shift, and go to state 69


state 8

  119 explain_clause: EXPLAIN . explain_list
  120               | EXPLAIN . LPAREN explain_list RPAREN

    COSTSOFF    shift, and go to state 70
    LPAREN      shift, and go to state 71
    VERBOSE     shift, and go to state 72
    IDENTIFIER  shift, and go to state 73

    explain_list  go to state 74
    explain_item  go to state 75


state 9

  126 load_clause: LOAD . load_pattern

    EDGES   shift, and go to state 76
    FROM    shift, and go to state 77
    LABELS  shift, and go to state 78

    load_pattern  go to state 79


state 10

  181 merge_clause: MERGE . path_pattern set_clause_opt

    LPAREN  shift, and go to state 80

    path_pattern  go to state 81
    node_pattern  go to state 82


state 11

  134 optional_opt: OPTIONAL .

    $default  reduce using rule 134 (optional_opt)


state 12

  192 prepare_clause: PREPARE . IDENTIFIER stmt_info_opt AS

    IDENTIFIER  shift, and go to state 83


state 13

  193 reindex_clause: REINDEX . VLABEL IDENTIFIER

    VLABEL  shift, and go to state 84


state 14

  194 remove_clause: REMOVE . expression_list

    ASTERISK    shift, and go to state 85
    DASH        shift, and go to state 86
    DOLLAR      shift, and go to state 87
    FAL         shift, and go to state 88
    LBRACE      shift, and go to state 89
    LBRACKET    shift, and go to state 90
    LPAREN      shift, and go to state 91
    NUL         shift, and go to state 92
    TRU         shift, and go to state 93
    IDENTIFIER  shift, and go to state 94
    STRING      shift, and go to state 95

    $default  reduce using rule 264 (negative_opt)

    boolean          go to state 96
    expression_list  go to state 97
    expression       go to state 98
    negative_opt     go to state 99
    function         go to state 100
    str_val          go to state 101


state 15

  195 return_clause: RETURN . distinct_not_opt return_item_clause union_opt

    DISTINCT  shift, and go to state 102
    NOT       shift, and go to state 103

    $default  reduce using rule 196 (distinct_not_opt)

    distinct_not_opt  go to state 104


state 16

  223 select_clause: SELECT . expression_list from_clause

    ASTERISK    shift, and go to state 85
    DASH        shift, and go to state 86
    DOLLAR      shift, and go to state 87
    FAL         shift, and go to state 88
    LBRACE      shift, and go to state 89
    LBRACKET    shift, and go to state 90
    LPAREN      shift, and go to state 91
    NUL         shift, and go to state 92
    TRU         shift, and go to state 93
    IDENTIFIER  shift, and go to state 94
    STRING      shift, and go to state 95

    $default  reduce using rule 264 (negative_opt)

    boolean          go to state 96
    expression_list  go to state 105
    expression       go to state 98
    negative_opt     go to state 99
    function         go to state 100
    str_val          go to state 101


state 17

  215 set_graph_clause: SET . graph_option EQUALS graph_path_list

    GRAPH       shift, and go to state 106
    GRAPH_PATH  shift, and go to state 107

    graph_option  go to state 108


state 18

  220 show_clause: SHOW . graph_option

    GRAPH       shift, and go to state 106
    GRAPH_PATH  shift, and go to state 107

    graph_option  go to state 109


state 19

  227 unwind_clause: UNWIND . expression AS IDENTIFIER
